@startuml data_base_er_diagram

' Configuración visual
skinparam linetype ortho
hide circle

entity "User" as user {
  + id [PK] : int <<auto_increment>>
  --
  + first_name : varchar(255) <<NULL>>
  + last_name : varchar(255) <<NULL>>
  * username : varchar(255) <<unique>>
  + password : varchar(255) <<NULL>>
  * use_password : boolean = true
  * is_bloked : boolean = false
  * createdAt : date = Now()
  * updatedAt : date = Now()
}

entity "Fee" as fee
{
  + id [PK] : int <<auto_increment>>
  --
  * name : varchar(4) <<unique>>
  * dca : double
  * bs_limit : double
  * bs_price : double
  * md_limit : double
  * md_price : double
  * sp_price : double
}

entity "FeeConf" as feeconf {
  + id [PK] : int <<auto_increment>>
  --
  fee_id: int <<FK>>
  meter_id: int <<FK>>
  * dca : double <<NULL>>
  * bs_limit : double <<NULL>>
  * bs_price : double <<NULL>>
  * md_limit : double <<NULL>>
  * md_price : double <<NULL>>
  * sp_price : double <<NULL>>
}

entity "Meter" as meter {
  + id [PK] : int <<auto_increment>>
  --
  * number_meter : int <<unique>>
  * userId : int <<FK>>
  * status_meter : enum('active', 'inactive') = 'active'
}

entity "Bill" as bill {
  + id [PK] : int <<auto_increment>>
  --
  * estimated_amount : double
  * watts_consumed : double
  * start_date : date
  * end_date : date
  * meterId : int <<FK>>
  * userId : int <<FK>>
  * createdAt : date = Now()
  * updatedAt : date = Now()
}

entity "Measure" as measure {
  + id [PK] : int <<auto_increment>>
  --
  * watts : int
  * meterId : int <<FK>> <<NULL>>
  * userId : int <<FK>> <<NULL>>
  * createdAt : date = Now()
  * updatedAt : date = Now()
}

entity "Group" as group {
  + id [PK] : int <<auto_increment>>
  --
  * name : varchar(255)
}

entity "User_tokens" as token {
  + id [PK] : int <<auto_increment>>
  --
  * token : text
  * expires_at : date
  * createdAt : date = Now()
  * updatedAt : date = Now()
  * is_revoked : boolean = false
  * userId : int <<FK>>
}

' Tablas Intermedias (Many-to-Many)
entity "Users_groups" as user_group {
  + userId [PK][FK] : int
  + groupId [PK][FK] : int
}

entity "User_meters" as user_meter {
  + userId [PK][FK] : int
  + meterId [PK][FK] : int
}

' Relaciones basadas en los ALTER TABLE
user ||--o{ token
user ||--o{ bill
user ||--o{ meter
user ||--o{ measure
user ||--o{ user_group
user ||--o{ user_meter

group ||--o{ user_group

meter ||--o{ bill
meter ||--o{ measure
meter ||--o{ user_meter
meter ||--|| feeconf

fee ||--o{ feeconf

@enduml